--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Altani Realtor</title>
     <!-- fonts links -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Space Grotesk' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Space Grotesk" rel="stylesheet"/>
     <!-- link to the custom css file -->
-    <link rel="stylesheet" href="./assets/css/styles.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/styles.css" type="text/css" />
 </head>
 <body>
+    <div class="header">
+        <img src="./assets/images/real-logo.jpg" alt="Altani" height="80"/>
+        <h2 id="name1">Altani Realtor</h2>
+        <div class="navbar">
+            <ul class="nav-links">
+                <li><a href="#rent">About</a></li>
+                <li><a href="#land">Rent</a></li>
+                <li><a href="#agent">Agent</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+        <button id="getstarted"><a href="#getstarted">Get Started</a></button>
+    </div> 
+
+    <!-- Hero's main content -->
     
 </body>
 </html>
