--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space Grotesk" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <!-- link to the custom css file -->
     <link rel="stylesheet" href="./assets/css/styles.css" type="text/css" />
 </head>
 <body>
     <div class="header">
-        <img src="./assets/images/real-logo.jpg" alt="Altani" height="80"/>
-        <h2 id="name1">Altani Realtor</h2>
+        <div id="logo"> <img src="./assets/images/real-logo.jpg" alt="Altani" height="80"/>
+            <h2 id="name1"><a href="#home">Altani Realtor</a></h2>
+        </div>
         <div class="navbar">
             <ul class="nav-links">
                 <li><a href="#rent">About</a></li>
@@ -29,6 +31,17 @@
     </div> 
 
     <!-- Hero's main content -->
+    <section class="heros">
+        <div class="intro">
+                <h1 id="helping">Helping you find<br>your Dream<br>Home</h1>
+                <p id="creating">Creating quality urban lifestyles, <br>building Stronger <br>communities</h2>
+                    <div>
+                        <button class="btn"><a>Make An Enquiry</a></button> 
+                    </div>
+        </div> 
+    </section>
+
+    <!-- about section -->
     
 </body>
 </html>
