add about section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <!-- link to the custom css file -->
     <link rel="stylesheet" href="./assets/css/styles.css" type="text/css" />
+    <!-- link to the custom icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <div class="header">
@@ -42,6 +44,73 @@
     </section>
 
     <!-- about section -->
+    <section class="about">
+        <div class="container">
+            <div class="about-image">
+                <img src="./assets/images/verandah.jpg" alt="home" height="600px" width= "500px">
+            </div>
+            <div class="about-content">
+                <h2><span id="about-title">About us</span></h2>
+                <p>As a leading realtor, we have a defining culture of doing much more than just selling real estate.</p>
+                <br>
+                <p>Our commitment, responsiveness, and respectability are the reason a large number of networks</p>
+                <br>
+                <p>Over 39,000 people work for us in more than 70 countries all over the world.<br>
+                    This breadth of global coverage, combined with specialist services</p>
+                    <br>
+                    <br>
+
+                    <h2><span id="why-us">Why you should choose us.</span></h2>
+
+                    <ul class="about-list">
+                        <li class="about-item">
+                            <div class="about-item-icon">
+                                <span class="material-symbols-outlined">
+                                    house
+                                    </span>
+                            </div>
+                            <p class="about-item-text">World class</p>
+                        </li>
+
+                        <li class="about-item">
+                            <div class="about-item-icon">
+                                <span class="material-symbols-outlined">
+                                    select_check_box
+                                    </span>
+                            </div>
+                            <p class="about-item-text">Affordable</p>
+                        </li>
+
+                        <li class="about-item">
+                            <div class="about-item-icon">
+                                <span class="material-symbols-outlined">
+                                    eco
+                                    </span>
+                            </div>
+                            <p class="about-item-text">Trusted</p>
+                        </li>
+                        
+                        <li class="about-item">
+                            <div class="about-item-icon">
+                                <span class="material-symbols-outlined">
+                                    lock
+                                    </span>
+                            </div>
+                            <p class="about-item-text">All Round Security</p>
+                        </li>
+
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+
+                        <button class="btn-2"><a href="#service">Our Services</a></button>
+
+
+                    </ul>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
