add services section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="navbar">
             <ul class="nav-links">
                 <li><a href="#rent">About</a></li>
-                <li><a href="#land">Rent</a></li>
+                <li><a href="#land">Services</a></li>
                 <li><a href="#agent">Agent</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -109,6 +109,60 @@
 
                     </ul>
             </div>
+        </div>
+    </section>
+
+    <!-- our services section -->
+    <section>
+        <div class="service">
+            <h4 class="service-subheading">Our services</h4>
+            <br>
+            <h1 class="service-heading">Our Main Focus</h1>
+            <br>
+            <ul class="service-list">
+                <li class="service-list-item">
+                    <div class="service-item-list-icon">
+                        <span class="material-symbols-outlined">
+                            share_location
+                            </span>
+                    </div>
+                    <h3 class="service-list-heading">Find a home</h3>
+                    <p class="service-list-text">over 1 million+ homes located at prime areas whereby there wont be problems with transportation, 
+                        for sale available on the website, we can match you with a house you will want to call home.</p>
+                    <a href="#"><span>Find</span><span class="material-symbols-outlined">
+                        arrow_forward
+                        </span></a>
+                </li>
+                <li class="service-list-item">
+                    <div class="service-list-item">
+                        <div class="service-list-item-icon">
+                            <span class="material-symbols-outlined">
+                                location_home
+                                </span>
+                        </div>
+                        <h3 class="service-list-heading">Rent a home</h3>
+                        <p class="service-list-text">over 1 million+ homes for rent  available, comes with good network, portable water, 24 hrs ad round
+                            the clock security. we can match you with a house you will want to call home.</p>
+                            <a href="#"><span>Rent</span><span class="material-symbols-outlined">
+                                arrow_forward
+                                </span></a>
+                    </div>
+                </li>
+                <li class="service-list-item">
+                    <div class="service-list-item-icon">
+                        <span class="material-symbols-outlined">
+                            handshake
+                            </span>
+                    </div>
+                    <h3 class="service-list-heading">Sell a home</h3>
+                    <p class="service-list-text">We have been in business for over 32 years, for client outside the country you can trust us to deliver well. 
+                        we can match you with a client you will want to trust.
+                    </p>
+                    <a href="#"><span>Find client</span><span class="material-symbols-outlined">
+                        arrow_forward
+                        </span></a>
+                </li>
+            </ul>
         </div>
     </section>
     
