add CTA section

--- a/index.html
+++ b/index.html
@@ -197,6 +197,22 @@
             </li>
         </ul>
     </section>
-    
+    <!-- - bottom Call To Action section-->
+    <section class="cta">
+        <div class="cta-container">
+            <div class="cta-card">
+                <div class="card-content">
+                    <h2 class="h2 card-title">Looking for a dream home?</h2>
+                    <p class="card-text">We can help you realize your dream of a new home</p>
+                </div>
+                <button class="btn cta-btn">
+                    <span>Explore Properties</span>
+                    <a href="#"><span class="material-symbols-outlined">
+                        arrow_forward
+                        </span></a>
+                </button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
