update footer section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" type="text/css" />
     <!-- link to the custom icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="header">
@@ -214,5 +215,91 @@
             </div>
         </div>
     </section>
+    <!-- footer section -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div>
+                <h1 id="name1">Altani Realtor</h1>
+                <p id="solutions">Solutions for easy and flexible<br>house hunting. You can trust us<br>anywhere through this<br>platform</p>
+
+                <ul class="contact-list">
+                    <li class="contact-list-item">
+                        <a href="#">
+                            <span class="material-symbols-outlined">
+                                location_on
+                                </span>
+                                <span>Molo, Nakuru, Kenya.</span>
+                        </a>
+                    </li>
+                    <li class="contact-list-item">
+                        <a href="#">
+                            <span class="material-symbols-outlined">
+                                call
+                                </span>
+                            <span>+25471524635</span>
+                        </a>
+                    </li>
+                    <li class="contact-list-item">
+                        <a href="#">
+                            <span class="material-symbols-outlined">
+                                mail
+                                </span>
+                                <span>altanirealtor@gmail.com</span>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="social-list">
+                    <li>
+                        <a href="#" class="fa fa-facebook"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-twitter"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-linkedin"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-youtube"></a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h1>Property</h1>
+                <ol class="footer-item-list" id="propertylist">
+                    <li><a href="#modules">Modules</a></li>
+                    <li><a href="partnership">Partnership</a></li>
+                    <li><a href="#watchdemo">Watch demo</a></li>
+                    <li><a href="#event">Event</a></li>
+                    <li><a href="#agent">Agent</a></li>
+                </ol>
+            </div>
+            <div>
+                <h1>About</h1>
+                <ol class="footer-item-list" id="aboutlist">
+                    <li><a href="#ourcompany">Our Company</a></li>
+                    <li><a href="#">Sign up/log in</a></li>
+                    <li><a href="#career">Career</a></li>
+                    <li><a href="#investorsrelations">Investor's Relations</a></li>
+                    <li><a href="#impact">Social Impacts</a></li>
+                </ol>
+            </div>
+            <div>
+                <h1>Resources</h1>
+                <ol class="footer-item-list" id="resourceslist">
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#givefeedback">Give feedback</a></li>
+                    <li><a href="systemstatus">System status</a></li>
+                    <li><a href="#privacypolicy">Privacy Policy</a></li>
+                </ol>
+            </div>
+        </div>
+    </footer>
+    <div class="footer-bottom">
+        <div class="footer-bottom-container">
+            <p class="copyright">
+                &copy; 2022 <a href="#">altanidevelopers</a>. All Rights Reserved. Terms & conditions apply.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
