update header top bar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,47 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <!-- header-top bar -->
+    <div class="header-top">
+        <div class="header-top-container">
+            <ul class="header-top-list">
+                <li>
+                    <a href="mailto:info@homeverse.com" class="header-top-link">
+                        <span class="material-symbols-outlined">
+                            mail
+                            </span>
+                        <span>info@homeverse.com</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="header-top-link">
+                        <span class="material-symbols-outlined">
+                            location_on
+                            </span>
+                            <span>Molo, Nakuru, Kenya.</span>
+                    </a>
+                </li>
+            </ul>
+            <div class="wrapper">
+                <ul class="header-top-social-list">
+                    <li>
+                        <a href="#" class="fa fa-facebook"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-twitter"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-linkedin"></a>
+                    </li>
+                    <li>
+                        <a href="#" class="fa fa-youtube"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!-- header-bottom bar -->
     <div class="header">
         <div id="logo"> <img src="./assets/images/real-logo.jpg" alt="Altani" height="80"/>
             <h2 id="name1"><a href="#home">Altani Realtor</a></h2>
