update contact email

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <span class="material-symbols-outlined">
                             mail
                             </span>
-                        <span>info@homeverse.com</span>
+                        <span>altanirealtor@gmail.com</span>
                     </a>
                 </li>
                 <li>
