--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <!-- link to the custom icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- link to the custom js file -->
+    <script defer src="./js/script.js"></script>
 </head>
-<body>
+<body onscroll="headerStick()">
     <!-- header-top bar -->
     <div class="header-top">
         <div class="header-top-container">
