update class names

--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
         </div>
         <div class="navbar">
             <ul class="nav-links">
-                <li><a href="#rent">About</a></li>
-                <li><a href="#land">Services</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#agent">Agent</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#products" class="menu-btn">Products</a></li>
+                <li><a href="#agent" class="menu-btn">Agent</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
         </div>
         <button id="getstarted"><a href="#getstarted">Get Started</a></button>
     </div> 
 
     <!-- Hero's main content -->
-    <section class="heros">
+    <section class="heros" id="home">
         <div class="intro">
                 <h1 id="helping">Helping you find<br>your Dream<br>Home</h1>
                 <p id="creating">Creating quality urban lifestyles, <br>building Stronger <br>communities</h2>
@@ -89,13 +89,13 @@
     </section>
 
     <!-- about section -->
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="about-image">
                 <img src="./assets/images/verandah.jpg" alt="home" height="600px" width= "500px">
             </div>
             <div class="about-content">
-                <h2><span id="about-title">About us</span></h2>
+                <h2><span class="about-title" id="about">About us</span></h2>
                 <p>As a leading realtor, we have a defining culture of doing much more than just selling real estate.</p>
                 <br>
                 <p>Our commitment, responsiveness, and respectability are the reason a large number of networks</p>
@@ -159,7 +159,7 @@
 
     <!-- our services section -->
     <section>
-        <div class="service">
+        <div class="service" id="services">
             <h4 class="service-subheading">Our services</h4>
             <br>
             <h1 class="service-heading">Our Main Focus</h1>
@@ -212,7 +212,7 @@
     </section>
 
     <!-- Product listing section -->
-    <section class="property">
+    <section class="property" id="products">
         <div class="properties">
             <h3 class="property-list-subheading">Properties</h3>
             <br>
