clean html code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- link to the custom js file -->
     <script defer src="./js/script.js"></script>
 </head>
-<body onscroll="headerStick()">
+<body>
     <!-- header-top bar -->
     <div class="header-top">
         <div class="header-top-container">
@@ -149,7 +149,7 @@
                         <br>
                         <br>
 
-                        <button class="btn-2"><a href="#service">Our Services</a></button>
+                        <button class="btn-2 menu-btn" id="services"><a href="#services">Our Services</a></button>
 
 
                     </ul>
